# chem-caption

./: .buildinfo  .gitignore  MANIFEST.in  README.md  api.html  comparator.html  genindex.html  howto.html  index.html  installation.html  molecule.html  noxfile.py  objects.inv  presets.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  test_requirements.txt  text.html  tox.ini  tutorial.html
.github/workflows/: deploy.yml  docs.yml  tests.yml
_modules/: index.html
_modules/chemcaption/: molecules.html
_modules/chemcaption/featurize/: adaptor.html  base.html  bonds.html  comparator.html  composition.html  electronicity.html  miscellaneous.html  reaction.html  rules.html  spatial.html  stereochemistry.html  substructure.html  symmetry.html  text.html
_sources/: index.rst.txt  tutorial.rst.txt
_sources/featurizers/: base.rst.txt  miscellaneous.rst.txt  rules.rst.txt
_static/: custom.css
docs/source/: api.rst  comparator.rst  conf.py  howto.rst  index.rst  installation.rst  molecule.rst  presets.rst  text.rst  tutorial.rst
docs/source/featurizers/: 3d.rst  adaptor.rst  bonds.rst  composition.rst  electronic.rst  index.rst  reaction.rst  registry.rst  rules.rst  simmetry.rst  sterochemistry.rst  substructure.rst
featurizers/: 3d.html  adaptor.html  base.html  bonds.html  composition.html  electronic.html  index.html  miscellaneous.html  reaction.html  registry.html  rules.html  simmetry.html  sterochemistry.html  substructure.html
src/: requirements.txt
src/chemcaption/: molecules.py  presets.py
src/chemcaption/export/: pre_export_tests.py
src/chemcaption/featurize/: __init__.py  adaptor.py  base.py  bonds.py  comparator.py  composition.py  electronicity.py  miscellaneous.py  reaction.py  registry.py  rules.py  spatial.py  stereochemistry.py  substructure.py  symmetry.py  text.py  text_utils.py  utils.py
tests/: conftests.py  test_molecules.py  test_pre_export_tests.py  test_version.py
tests/featurize/: test_featurize_adaptor.py  test_featurize_base.py  test_featurize_bonds.py  test_featurize_comparator.py  test_featurize_composition.py  test_featurize_electronicity.py  test_featurize_miscellaneous.py  test_featurize_reaction.py  test_featurize_rules.py  test_featurize_spatial.py  test_featurize_stereochemistry.py  test_featurize_substructure.py  test_featurize_symmetry.py  test_featurize_text.py  test_registry.py  test_text_utils.py  text_featurize_base.py
tests/regression/data/: pubchem_response.csv
tests/regression/data/legacy/: add_features.py  data_generation.py  parallelized_data_generation.py  trim_data.py
tests/regression/featurize/: test_featurize_adaptor.py  test_featurize_comparator.py  test_featurize_miscellaneous.py  test_featurize_spatial.py
