##########################
# Setup.py Configuration #
##########################
[metadata]
name = chemcaption
version = 0.0.1-dev
description = Caption molecules and materials for pretraining for neural networks
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/chem-caption
download_url = https://github.com/kjappelbaum/chem-caption/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/chem-caption/issues
    Source Code = https://github.com/kjappelbaum/chem-caption

# Author information
author =
    Kevin Maik Jablonka
    Benedict Oshomah Emoekabu
author_email =
    mail@kjablonka.com
    emoekabuoshomah@gmail.com
maintainer =
    Kevin Maik Jablonka
    Benedict Oshomah Emoekabu
maintainer_email =
    mail@kjablonka.com
    emoekabuoshomah@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =

[options]
install_requires =
    pandas
    rdkit
    selfies
    tqdm
    typing_extensions
    networkx
    scipy
    frozendict
    jsonlines
    fire
    numpy

# Random options
zip_safe = False
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
morfeus = 
    morfeus-ml
    spyrmsd
tests =
    pytest
    coverage
docs =
    sphinx
    furo
    sphinx-autodoc-typehints
    sphinx_automodapi
    sphinx_copybutton
    sphinxcontrib-katex
    sphinx-click
symmetry =
    givemeconformer
    pymatgen
export =
    dask
    selfies
    fire
    jsonlines


[options.entry_points]
console_scripts =
    chemcaption = chemcaption.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = chemcaption
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/chemcaption
    .tox/*/lib/python*/site-packages/chemcaption

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
     # H101: Use TODO(NAME)
    H101,
    # H202: assertRaises Exception too broad
    H202,
    # H233: Python 3.x incompatible use of print operator
    H233,
    # H301: one import per line
    H301,
    # H306: imports not in alphabetical order (time, os)
    H306,
    # H401: docstring should not start with a space
    H401,
    # H403: multi line docstrings should end on a new line
    H403,
    # H404: multi line docstring should start without a leading new line
    H404,
    # H405: multi line docstring summary not separated with an empty line
    H405,
    # H501: Do not use self.__dict__ for string formatting
    H501
    # W503: Line break after the binary operation
    W503
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data,
    __init__.py
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    chemcaption
    tests
